WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
96179
[Qt] Fix CoreIPC setup between ProcessLauncher and WebProcessMain on Windows
https://bugs.webkit.org/show_bug.cgi?id=96179
Summary
[Qt] Fix CoreIPC setup between ProcessLauncher and WebProcessMain on Windows
Simon Hausmann
Reported
2012-09-08 00:11:42 PDT
[Qt] Fix CoreIPC setup between ProcessLauncher and WebProcessMain on Windows
Attachments
Patch
(4.70 KB, patch)
2012-09-08 00:22 PDT
,
Simon Hausmann
no flags
Details
Formatted Diff
Diff
Patch
(4.98 KB, patch)
2012-09-08 00:43 PDT
,
Simon Hausmann
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Simon Hausmann
Comment 1
2012-09-08 00:22:27 PDT
Created
attachment 162949
[details]
Patch
Early Warning System Bot
Comment 2
2012-09-08 00:35:38 PDT
Comment on
attachment 162949
[details]
Patch
Attachment 162949
[details]
did not pass qt-wk2-ews (qt): Output:
http://queues.webkit.org/results/13786860
Simon Hausmann
Comment 3
2012-09-08 00:43:02 PDT
Created
attachment 162950
[details]
Patch
WebKit Review Bot
Comment 4
2012-09-08 03:50:14 PDT
Comment on
attachment 162950
[details]
Patch Clearing flags on attachment: 162950 Committed
r127967
: <
http://trac.webkit.org/changeset/127967
>
WebKit Review Bot
Comment 5
2012-09-08 03:50:17 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug