[Qt] Fix CoreIPC setup between ProcessLauncher and WebProcessMain on Windows https://bugs.webkit.org/show_bug.cgi?id=96179

Patch by Simon Hausmann <simon.hausmann@nokia.com> on 2012-09-08
Reviewed by Kenneth Rohde Christiansen.

* UIProcess/Launcher/qt/ProcessLauncherQt.cpp:
(WebKit::ProcessLauncher::launchProcess): Hide Unixy platform specific code
and includes behind appropriate platform #ifdefs and use
CoreIPC::Connection::createServerAndClientIdentifiers to set up the IPC pipes.
We also need to tell Windows about our intent of using the client handle in
the child web process.
* WebProcess/qt/WebProcessMainQt.cpp:
(WebKit::WebProcessMainQt): After retrieving the IPC identifier we call
WebKit::WebProcess::shared().initialize with it. That function actually
cares a CIPC::Connection::Identifier as argument, which happens to be an
int on Unix, but it's actually a HANDLE on Windows. Change the parameter
type according to and a reinterpret_cast from the converted unsigned integer,
similar to WebProcessMainWin.cpp.

Canonical link: https://commits.webkit.org/114065@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@127967 268f45cc-cd09-0410-ab3c-d52691b4dbfc